backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: grpc-hello-world
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
      annotations:
        eks.amazonaws.com/fargate-profile: grpc-hello-world-fargate-profile
    spec:
      containers:
      - name: grpc-hello-world
        image: 616247551677.dkr.ecr.ap-southeast-3.amazonaws.com/grpc-hello-world:dev
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "1024Mi"  # Set your desired memory request
            cpu: "100m"      # Set your desired CPU request
          limits:
            memory: "2056Mi"  # Set your desired memory limit
            cpu: "200m"      # Set your desired CPU limit
