backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: development
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8080
